верска карточек товаров для каталога в декстопной версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,7 +29,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list reset-list">
             <li class="main-nav__item ">
-              <a class="main-nav__link--catalog main-nav__link " href="./index.html">Главная</a>
+              <a class="main-nav__link main-nav__link--catalog " href="./index.html">Главная</a>
             </li>
             <li class="main-nav__item main-nav__item--active">
               <a class="main-nav__link main-nav__link--catalog" href="./catalog.html">Каталог продукции</a>
@@ -55,12 +55,14 @@
             <!--карточка товара 1-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/kitchen-500-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/kitchen-500-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-500.png"
-                    alt="Кэт энерджи про 500 грамм со вкусом курицы.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/kitchen-500-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/kitchen-500-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-500.png"
+                      alt="Кэт энерджи про 500 грамм со вкусом курицы.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -85,12 +87,14 @@
             <!--карточка товара 2-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/kitchen-1000-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/kitchen-1000-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-1000.png"
-                    alt="Кэт энерджи про 1000 грамм со вкусом курицы.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/kitchen-1000-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/kitchen-1000-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-1000.png"
+                      alt="Кэт энерджи про 1000 грамм со вкусом курицы.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
@@ -115,12 +119,14 @@
             <!--карточка товара 3-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/fish-500-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/fish-500-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-500.png"
-                    alt="Кэт энерджи про 500 грамм со вкусом рыбы.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/fish-500-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/fish-500-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-500.png"
+                      alt="Кэт энерджи про 500 грамм со вкусом рыбы.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -145,12 +151,14 @@
             <!--карточка товара 4-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/fish-1000-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/fish-1000-tablet.png" media="(min-width:768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-1000.png"
-                    alt="Кэт энерджи про 1000 грамм со вкусом рыбы.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/fish-1000-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/fish-1000-tablet.png" media="(min-width:768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-1000.png"
+                      alt="Кэт энерджи про 1000 грамм со вкусом рыбы.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г </h3>
@@ -175,12 +183,14 @@
             <!--карточка товара 5-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/buckwheat-500-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/buckwheat-500-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-500.png"
-                    alt="Кэт энерджи слим 500 грамм со вкусом гречки.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/buckwheat-500-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/buckwheat-500-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-500.png"
+                      alt="Кэт энерджи слим 500 грамм со вкусом гречки.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
@@ -205,12 +215,14 @@
             <!--карточка товара 6-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/buckwheat-1000-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/buckwheat-1000-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-1000.png"
-                    alt="Кэт энерджи слим 1000 грамм со вкусом гречки.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/buckwheat-1000-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/buckwheat-1000-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-1000.png"
+                      alt="Кэт энерджи слим 1000 грамм со вкусом гречки.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
@@ -235,12 +247,14 @@
             <!--карточка товара 7-->
             <li class="product-card__item">
               <a class="product-card__icon" href="#">
-                <picture>
-                  <source srcset="img/rice-500-desktop.png" media="(min-width: 1440px)">
-                  <source srcset="img/rice-500-tablet.png" media="(min-width: 768px)">
-                  <img class="product-card__photo" src="img/product-card-cat-energy-slim-rice-500.png"
-                    alt="Кэт энерджи слим 500 грамм со вкусом риса.">
-                </picture>
+                <div class="product-card__wrapper-icon">
+                  <picture>
+                    <source srcset="img/rice-500-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/rice-500-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-rice-500.png"
+                      alt="Кэт энерджи слим 500 грамм со вкусом риса.">
+                  </picture>
+                </div>
               </a>
               <div class="product-card__info">
                 <h3 class="product-card__title">Cat Energy Slim 500 г</h3>
