--- a/source/form.html
+++ b/source/form.html
@@ -32,10 +32,10 @@
               <a class="main-nav__link main-nav__link--catalog" href="./index.html">Главная</a>
             </li>
             <li class="main-nav__item main-nav__item--active">
-              <a class="main-nav__link main-nav__link--catalog" href="./catalog.html">Каталог продукции</a>
+              <a class="main-nav__link main-nav__link--form" href="./catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--catalog" href="./form.html">Подбор программы</a>
+              <a class="main-nav__link main-nav__link--form" href="./form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -96,7 +96,9 @@
             </fieldset>
           </div>
           <div class="questionnaire__contact contact">
-            <h3 class="contact__title">Контактные данные (владельца кота)</h3>
+            <div class="contact__wrapper line">
+              <h3 class="contact__title">Контактные данные <br class="none">(владельца кота)</h3>
+            </div>
             <ul class="contact__list reset-list">
               <li class="contact__item">
                 <label class="contact__label contact__label--email" for="email">E-mail:* </label>
@@ -112,41 +114,44 @@
           </div>
 
           <div class="questionnaire__comment comment">
-            <h3 class="comment__title">Комментарий</h3>
+            <div class="comment__wrapper line">
+              <h3 class="comment__title">Комментарий</h3>
+            </div>
             <label class="comment__skill-cat" for="skills"> </label>
             <textarea class="comment__skill-cat-form" rows="10" cols="40" id="skills">Расскажите обо всех повaдках кота
             </textarea>
           </div>
 
           <div class="questionnaire__additionally additionally">
-            <fieldset class="additionally__form">
-              <legend class="additionally__buy-more ">Дополнительно</legend>
-              <ul class="additionally__list reset-list">
-                <li class="additionally__item">
-                  <label class="additionally__fake-sugar">
-                    <input class="additionally__fake-sugar-form" type="checkbox" name="additionally" value="fake-sugar"
-                      checked>
-                    Сахарозаменитель
-                  </label>
-                </li>
-                <li class="additionally__item">
-                  <label class="additionally__water">
-                    <input class="additionally__water-form" type="checkbox" name="additionally" value="water"> Питьевая
-                    вода
-                  </label>
-                </li>
-                <li class="additionally__item">
-                  <label class="additionally__milk">
-                    <input class="additionally__milk-form" type="checkbox" name="additionally" value="milk"> Молоко
-                  </label>
-                </li>
-                <li class="additionally__item">
-                  <label class="additionally__vitamins">
-                    <input class="additionally__vitamins-form" type="checkbox" name="additionally" value="vitamins">
-                    Витамины
-                  </label>
-                </li>
-              </ul>
+            <div class="additionally__wrapper line">
+              <h2 class="additionally__buy-more ">Дополнительно</h2>
+            </div>
+            <ul class="additionally__list reset-list">
+              <li class="additionally__item">
+                <label class="additionally__fake-sugar">
+                  <input class="additionally__fake-sugar-form" type="checkbox" name="additionally" value="fake-sugar"
+                    checked>
+                  Сахарозаменитель
+                </label>
+              </li>
+              <li class="additionally__item">
+                <label class="additionally__water">
+                  <input class="additionally__water-form" type="checkbox" name="additionally" value="water"> Питьевая
+                  вода
+                </label>
+              </li>
+              <li class="additionally__item">
+                <label class="additionally__milk">
+                  <input class="additionally__milk-form" type="checkbox" name="additionally" value="milk"> Молоко
+                </label>
+              </li>
+              <li class="additionally__item">
+                <label class="additionally__vitamins">
+                  <input class="additionally__vitamins-form" type="checkbox" name="additionally" value="vitamins">
+                  Витамины
+                </label>
+              </li>
+            </ul>
             </fieldset>
           </div>
           <div class="questionnaire__send">
@@ -167,11 +172,16 @@
             <h2 class="collaboration__title">приглашаем<br>к сотрудничеству <br>дилеров!</h2>
             <p class="collaboration__address">ул. Большая<br> Конюшенная, д. 19/8 <br>Санкт-Петербург</p>
           </div>
-          <div class="collaboration__map">
-            <h3 class="visually-hidden">Наше местоположение.</h3>
-            <img class="collaboration__image-map" src="img/map.jpg" alt="Карта, с отмеченной локацией." width="320"
-              height="362">
-          </div>
+        </div>
+        <div class="collaboration__map">
+          <h3 class="visually-hidden">Наше местоположение.</h3>
+          <iframe class="collaboration__google-map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+            width="100%"
+            height="362"
+            allowfullscreen
+            title="Офис компании по адресу набережная реки Карповки, 5, литера П, Санкт-Петербург">
+          </iframe>
         </div>
       </section>
 
