Ретинизация изображений главной страницы сайта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
               <a class="main-nav__link main-nav__link--catalog" href="./catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link" href="./form.html">Подбор программы</a>
+              <a class="main-nav__link main-nav__link--catalog" href="./form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -57,9 +57,9 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/kitchen-500-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/kitchen-500-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-500.png"
+                    <source srcset="img/chicken-500-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/chicken-500-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/chicken-500-mobile.png"
                       alt="Кэт энерджи про 500 грамм со вкусом курицы.">
                   </picture>
                 </div>
@@ -89,9 +89,9 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/kitchen-1000-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/kitchen-1000-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-chicken-1000.png"
+                    <source srcset="img/chicken-1000-desktop.png" media="(min-width: 1440px)">
+                    <source srcset="img/chicken-1000-tablet.png" media="(min-width: 768px)">
+                    <img class="product-card__photo" src="img/chicken-1000-mobile.png"
                       alt="Кэт энерджи про 1000 грамм со вкусом курицы.">
                   </picture>
                 </div>
@@ -123,7 +123,7 @@
                   <picture>
                     <source srcset="img/fish-500-desktop.png" media="(min-width: 1440px)">
                     <source srcset="img/fish-500-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-500.png"
+                    <img class="product-card__photo" src="img/fish-500-mobile.png"
                       alt="Кэт энерджи про 500 грамм со вкусом рыбы.">
                   </picture>
                 </div>
@@ -155,7 +155,7 @@
                   <picture>
                     <source srcset="img/fish-1000-desktop.png" media="(min-width: 1440px)">
                     <source srcset="img/fish-1000-tablet.png" media="(min-width:768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-pro-fish-1000.png"
+                    <img class="product-card__photo" src="img/fish-1000-mobile.png"
                       alt="Кэт энерджи про 1000 грамм со вкусом рыбы.">
                   </picture>
                 </div>
@@ -187,7 +187,7 @@
                   <picture>
                     <source srcset="img/buckwheat-500-desktop.png" media="(min-width: 1440px)">
                     <source srcset="img/buckwheat-500-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-500.png"
+                    <img class="product-card__photo" src="img/buckwheat-500-mobile.png"
                       alt="Кэт энерджи слим 500 грамм со вкусом гречки.">
                   </picture>
                 </div>
@@ -219,7 +219,7 @@
                   <picture>
                     <source srcset="img/buckwheat-1000-desktop.png" media="(min-width: 1440px)">
                     <source srcset="img/buckwheat-1000-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-buckwheat-1000.png"
+                    <img class="product-card__photo" src="img/buckwheat-1000-mobile.png"
                       alt="Кэт энерджи слим 1000 грамм со вкусом гречки.">
                   </picture>
                 </div>
@@ -251,7 +251,7 @@
                   <picture>
                     <source srcset="img/rice-500-desktop.png" media="(min-width: 1440px)">
                     <source srcset="img/rice-500-tablet.png" media="(min-width: 768px)">
-                    <img class="product-card__photo" src="img/product-card-cat-energy-slim-rice-500.png"
+                    <img class="product-card__photo" src="img/rice-500-mobile.png"
                       alt="Кэт энерджи слим 500 грамм со вкусом риса.">
                   </picture>
                 </div>
