Ретинизация изображений для страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,9 +57,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/chicken-500-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/chicken-500-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/chicken-500-desktop.png, img/retina/chicken-500-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/chicken-500-tablet.png, img/retina/chicken-500-desktop-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/chicken-500-mobile.png"
+                      srcset="img/chicken-500-mobile.png, img/retina/chicken-500-mobile-@2x.png 2x"
                       alt="Кэт энерджи про 500 грамм со вкусом курицы.">
                   </picture>
                 </div>
@@ -89,9 +92,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/chicken-1000-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/chicken-1000-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/chicken-1000-desktop.png, img/retina/chicken-1000-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/chicken-1000-tablet.png, img/retina/chicken-1000-tablet-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/chicken-1000-mobile.png"
+                      srcset="img/chicken-1000-mobile.png, img/retina/chicken-1000-mobile-@2x.png 2x"
                       alt="Кэт энерджи про 1000 грамм со вкусом курицы.">
                   </picture>
                 </div>
@@ -121,9 +127,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/fish-500-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/fish-500-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/fish-500-desktop.png, img/retina/fish-500-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/fish-500-tablet.png, img/retina/fish-500-tablet-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/fish-500-mobile.png"
+                      srcset="img/fish-500-mobile.png, img/retina/fish-500-mobile-@2x.png 2x"
                       alt="Кэт энерджи про 500 грамм со вкусом рыбы.">
                   </picture>
                 </div>
@@ -153,9 +162,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/fish-1000-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/fish-1000-tablet.png" media="(min-width:768px)">
+                    <source srcset="img/fish-1000-desktop.png, img/retina/fish-1000-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/fish-1000-tablet.png, img/retina/fish-1000-tablet-@2x.png 2x"
+                      media="(min-width:768px)">
                     <img class="product-card__photo" src="img/fish-1000-mobile.png"
+                      srcset="img/fish-1000-mobile.png, img/retina/fish-1000-mobile-@2x.png 2x"
                       alt="Кэт энерджи про 1000 грамм со вкусом рыбы.">
                   </picture>
                 </div>
@@ -185,9 +197,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/buckwheat-500-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/buckwheat-500-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/buckwheat-500-desktop.png, img/retina/buckwheat-500-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/buckwheat-500-tablet.png, img/retina/buckwheat-500-tablet-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/buckwheat-500-mobile.png"
+                      srcset="img/buckwheat-500-mobile.png, img/retina/buckwheat-500-mobile-@2x.png 2x"
                       alt="Кэт энерджи слим 500 грамм со вкусом гречки.">
                   </picture>
                 </div>
@@ -217,9 +232,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/buckwheat-1000-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/buckwheat-1000-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/buckwheat-1000-desktop.png, img/retina/buckwheat-1000-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/buckwheat-1000-tablet.png, img/retina/buckwheat-1000-tablet-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/buckwheat-1000-mobile.png"
+                      srcset="img/buckwheat-1000-mobile.png, img/retina/buckwheat-1000-mobile-@2x.png 2x"
                       alt="Кэт энерджи слим 1000 грамм со вкусом гречки.">
                   </picture>
                 </div>
@@ -249,9 +267,12 @@
               <a class="product-card__icon" href="#">
                 <div class="product-card__wrapper-icon">
                   <picture>
-                    <source srcset="img/rice-500-desktop.png" media="(min-width: 1440px)">
-                    <source srcset="img/rice-500-tablet.png" media="(min-width: 768px)">
+                    <source srcset="img/rice-500-desktop.png, img/retina/rice-500-desktop-@2x.png 2x"
+                      media="(min-width: 1440px)">
+                    <source srcset="img/rice-500-tablet.png, img/retina/rice-500-tablet-@2x.png 2x"
+                      media="(min-width: 768px)">
                     <img class="product-card__photo" src="img/rice-500-mobile.png"
+                      srcset="img/rice-500-mobile.png, img/retina/rice-500-mobile-@2x.png 2x"
                       alt="Кэт энерджи слим 500 грамм со вкусом риса.">
                   </picture>
                 </div>
