базовые стили для котов до и после

--- a/source/index.html
+++ b/source/index.html
@@ -147,11 +147,11 @@
             <div class="live-example__statistic module">
               <div class="module__description">
                 <span class="module__number">5 кг</span>
-                <span class="module__text module__text--lose-weight">снижение <br> веса</span>
+                <span class="module__text module__text--lose-weight">снижение <br class="module__text--br"> веса</span>
               </div>
               <div class="module__description">
                 <span class="module__number">60 дней</span>
-                <span class="module__text module__text--period">затрачено <br> времени</span>
+                <span class="module__text module__text--period">затрачено <br class="module__text--br"> времени</span>
               </div>
               <div class="module__description module__description--result">
                 <span class="module__number module__text--result">Затраты на питание:</span>
@@ -188,6 +188,16 @@
                   </label>
                   <span class="range-bar__after">Стало</span>
                 </div>
+
+                <div class="cat-comparison__range-mobile range-bar-mobile">
+                  <span class="range-bar-mobile__before">Было</span>
+                  <div class="range-bar-mobile__scale" id="mobileToggleCatComparison">
+                      <span class="range-bar-mobile__toggle-before range-bar-mobile__toggle-before--active" id="mobileToggleCatComparisonBefore"></span>
+                      <span class="range-bar-mobile__toggle-after" id="mobileToggleCatComparisonAfter"></span>
+                  </div>
+                  <span class="range-bar-mobile__after">Стало</span>
+                </div>
+
               </div>
             </div>
           </div>
