--- a/source/catalog.html
+++ b/source/catalog.html
@@ -95,8 +95,7 @@
         alt="Логотип Cat Energy.">
       <nav class="main-header__nav main-nav main-nav--closed main-nav--js">
         <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню.</span>
-          <svg class="main-nav__burger">
+          <svg class="main-nav__burger" aria-label="Отрыть меню." focusable="false">
             <use xlink:href="#menu-burger"></use>
           </svg>
         </button>
@@ -471,34 +470,34 @@
           <h3 class="visually-hidden">Наши социальные сети.</h3>
           <ul class="footer__social-list footer-social reset-list">
             <li class="footer-social__item">
-              <a class="footer-social__link" href="#">
+              <a class="footer-social__link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте.</span>
-                <svg class="footer-social__icon footer-social__icon--vk">
+                <svg class="footer-social__icon footer-social__icon--vk" aria-label="Ссылка на страницу HTML Academy в социальной сети Вконтакте.">
                   <use xlink:href="#vk"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social__item">
-              <a class="footer-social__link" href="#">
+              <a class="footer-social__link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">YouTube.</span>
-                <svg class="footer-social__icon footer-social__icon--yt">
+                <svg class="footer-social__icon footer-social__icon--yt" aria-label="Ссылка на канал HTML Academy в YouTube.">
                   <use xlink:href="#youtube"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social__item">
-              <a class="footer-social__link" href="#">
+              <a class="footer-social__link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Телеграм.</span>
-                <svg class="footer-social__icon footer-social__icon-tg">
+                <svg class="footer-social__icon footer-social__icon-tg" aria-label="Канал HTML Academy в телеграмме.">
                   <use xlink:href="#telegram"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </section>
-        <a class="footer__copyright copyright" href="#">
+        <a class="footer__copyright copyright" href="https://htmlacademy.ru">
           <p class="copyright__link">HTML Academy </p>
-          <svg class="copyright__htmlacademy-logo">
+          <svg class="copyright__htmlacademy-logo" aria-label="Ссылка на сайт HTML Академии.">
             <use xlink:href="#htmlacademy"></use>
           </svg>
         </a>
