--- a/source/index.html
+++ b/source/index.html
@@ -90,8 +90,8 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list reset-list">
-            <li class="main-nav__item main-nav__item--active">
-              <a class="main-nav__link" href="#">Главная</a>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--active" href="#">Главная</a>
             </li>
             <li class="main-nav__item">
               <a class="main-nav__link" href="./catalog.html">Каталог продукции</a>
@@ -148,8 +148,9 @@
               </p>
               <div class="catalog-program__icon-tablet catalog-program__icon--cat-slim-tablet"></div>
             </div>
-            <a class="catalog-program__toggle catalog-program-slim" href="#">
-              каталог slim
+            <a class="catalog-program__toggle" href="#">
+             <span class="catalog-program__name">каталог slim</span>
+              <div class="catalog-program__arrow"></div>
             </a>
           </li>
           <li class="catalog-program__item">
@@ -163,7 +164,10 @@
               </p>
               <div class="catalog-program__icon-tablet catalog-program__icon--cat-pro-tablet"></div>
             </div>
-            <a class="catalog-program__toggle catalog-program-pro" href="#">каталог pro</a>
+            <a class="catalog-program__toggle catalog-program-pro" href="#">
+              <span class="catalog-program__name"> каталог pro </span>
+              <div class="catalog-program__arrow"></div>
+            </a>
           </li>
         </ul>
       </div>
@@ -286,8 +290,8 @@
     <div class="footer__wrapper">
       <!--Сотрудничество-->
       <section class="footer__collaboration collaboration">
-        <div class="collaboration__wrapper">
-          <div class="collaboration__invitation">
+        <div class="collaboration__wrapper collaboration__wrapper--index">
+          <div class="collaboration__invitation collaboration__invitation--index">
             <h2 class="collaboration__title">приглашаем<br>к сотрудничеству <br>дилеров!</h2>
             <p class="collaboration__address">ул. Большая<br> Конюшенная, д. 19/8 <br>Санкт-Петербург</p>
           </div>
