--- a/source/form.html
+++ b/source/form.html
@@ -88,14 +88,14 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list reset-list">
-            <li class="main-nav__item ">
+            <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--catalog" href="./index.html">Главная</a>
             </li>
-            <li class="main-nav__item main-nav__item--active">
+            <li class="main-nav__item">
               <a class="main-nav__link main-nav__link--form" href="./catalog.html">Каталог продукции</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--form" href="./form.html">Подбор программы</a>
+              <a class="main-nav__link main-nav__link--form main-nav__link--active main-nav__link--form-active" href="./form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
